# snip_copy

./: .gitignore  README.md  pyproject.toml
snip_copy/: __init__.py  __main__.py  copy.py  copy_file.py  parse.py  snip.py
snip_copy/ipynb/: __init__.py  __main__.py  copy.py  copy_file.py  json_ipynb.py
test/: test_copy.py  test_main.py  test_parse.py  test_snip.py
test/ex_hw/: rubric.ipynb  rubric.py  simple.ipynb  solution.ipynb  solution.py  student.ipynb  student.py
test/ipynb/: test_copy_ipynb.py  test_json_ipynb.py  test_main_ipynb.py
