[project]
name = "snip_copy"
version = "0.0.3"
authors = [
    { name = "Matt Higger", email = "matt.higger@gmail.com" },
]
description = "snips lines from text files (automate creation of student copy from solution)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/matthigger/snip_copy"